Micsoreaza logo cu 7px (200 -> 193px) - fix overflow navbar

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .navbar__logo-img {
-  max-height: 200px;
+  max-height: 193px;
   width: auto;
   display: block;
 }
